--- a/mmbx/config/dev.ini
+++ b/mmbx/config/dev.ini
@@ -1,19 +1,11 @@
-; Configuration pour le développement
-; rnvs : fichier ini : https://en.wikipedia.org/wiki/INI_file
 
 [Installation]
-; rnvs : pas oublier apostrophes '...' :
-;        indispensables si espaces dans chemin d'accès
-; rnvs : pas oublier '/' à la fin car Controller::redirect compte dessus
-; webRoot = '/~nvs/tmp/MyBlog_2020/'     ; rnvs : esi
-; webRoot = '/~nico/tmp/MyBlog_2020_win/'    ; rnvs : maison win
-webRoot = '/project/'    ; rnvs : maison
+webRoot = '/project/'
 
 [BD]
-dsn = 'mysql:host=localhost;dbname=projet_din_mai_2020;charset=utf8'    ; rnvs : data source name
+dsn = 'mysql:host=localhost;dbname=meimbox;charset=utf8'    ; rnvs : data source name
 login = root
-; mdp =           ; rnvs : esi / maison win
-mdp = root      ; rnvs : maison
+mdp = root
 
 ; rnvs : start
 [Debug]
