display the home page

--- a/mmbx/config/dev.ini
+++ b/mmbx/config/dev.ini
@@ -1,6 +1,6 @@
 
 [Installation]
-webRoot = '/project/'
+webRoot = '/v2.0/mmbx/'
 
 [BD]
 dsn = 'mysql:host=localhost;dbname=meimbox;charset=utf8'    ; rnvs : data source name
