--- a/mmbx/.htaccess
+++ b/mmbx/.htaccess
@@ -1,4 +1,4 @@
 # Réécrit une URL de type xxx/yyy/zzz en index.php?controller=xxx&action=yyy&id=zzz
 RewriteEngine on
 RewriteRule ^grid/?$ index.php?controller=grid&action=index [QSA,NC,L]
-#RewriteRule ^([a-zA-Z]*)/?([a-zA-Z]*)?/?([a-zA-Z0-9]*)?/?$ index.php?controller=$1&action=$2&id=$3 [NC]
+RewriteRule ^([a-zA-Z]*)/?([a-zA-Z]*)?/?([a-zA-Z0-9]*)?/?$ index.php?controller=$1&action=$2 [QSA,NC]
