--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -1,6 +1,7 @@
 
 [Installation]
-webRoot = '/v2.0/mmbx/'
+; webRoot = '/v2.0/mmbx/'
+webRoot = '/versions/v0.2/mmbx/'
 
 [BD]
 dsn = 'mysql:host=localhost;dbname=meimbox;charset=utf8'    ; rnvs : data source name
