--- a/versions/v0.2/mmbx/.htaccess
+++ b/versions/v0.2/mmbx/.htaccess
@@ -1,11 +1,17 @@
 RewriteEngine on
-# grid
-RewriteRule ^grid/qr/+([A-z]+)/*$ index.php?controller=grid&action=$1 [QSA,NC,L]
-RewriteRule ^grid/?$ index.php?controller=grid&action=index [QSA,NC,L]
+# Grid
+RewriteRule ^grid/qr/+([A-z]+)/*$                   index.php?controller=grid&action=$1 [QSA,NC,L]
+RewriteRule ^grid/?$                                index.php?controller=grid&action=index [QSA,NC,L]
 
-# item
-RewriteRule ^item/qr/+([A-z]+)/*$  index.php?controller=item&action=$1 [QSA,NC,L]
-RewriteRule ^item/+([A-z0-9]+)(/+[A-z\-]+)?/*$   index.php?controller=item&action=index&prodid=$1 [QSA,NC,L]
+# Item
+RewriteRule ^item/qr/+([A-z]+)/*$                   index.php?controller=item&action=$1 [QSA,NC,L]
+RewriteRule ^item/+([A-z0-9]+)(/+[A-z\-]+)?/*$      index.php?controller=item&action=index&prodid=$1 [QSA,NC,L]
+
+# Dashboard
+RewriteRule ^dashboard/qr/+([A-z]+)/*$	            index.php?controller=dashboard&action=$1 [QSA,NC,L]
+RewriteRule ^dashboard/shopbag/*$	                index.php?controller=dashboard&action=shopbag [QSA,NC,L]
+RewriteRule ^dashboard/orders/*$	                index.php?controller=dashboard&action=orders [QSA,NC,L]
+RewriteRule ^dashboard/*$	                        index.php?controller=dashboard&action=index [QSA,NC,L]
 
 # default
 # RewriteRule ^([a-zA-Z]*)/?([a-zA-Z]*)?/?([a-zA-Z0-9]*)?/?$ index.php?controller=$1&action=$2 [QSA,NC]
