display the Sign page

--- a/versions/v0.2/mmbx/.htaccess
+++ b/versions/v0.2/mmbx/.htaccess
@@ -15,6 +15,7 @@ RewriteRule ^dashboard/*$	                        index.php?controller=dashboard
 
 # Checkout
 RewriteRule ^checkout/qr/+([A-z]+)/*$               index.php?controller=checkout&action=$1 [QSA,NC,L]
+RewriteRule ^checkout/sign/*$	                    index.php?controller=checkout&action=sign [QSA,NC,L]
 RewriteRule ^checkout/*$	                        index.php?controller=checkout&action=index [QSA,NC,L]
 
 # default
