--- a/versions/v0.2/mmbx/.htaccess
+++ b/versions/v0.2/mmbx/.htaccess
@@ -1,4 +1,8 @@
 RewriteEngine on
+# Home
+RewriteRule ^home/qr/+([A-z]+)/*$	                            index.php?controller=home&action=$1 [QSA,NC,L]
+RewriteRule ^home/*$	                                        index.php?controller=home&action=index [QSA,NC,L]
+
 # Grid
 RewriteRule ^grid/qr/+([A-z]+)/*$                   index.php?controller=grid&action=$1 [QSA,NC,L]
 RewriteRule ^grid/?$                                index.php?controller=grid&action=index [QSA,NC,L]
