add Stripe's API and the class MyStripe to handle Stripe requests

--- a/versions/v0.2/mmbx/config/prod.ini
+++ b/versions/v0.2/mmbx/config/prod.ini
@@ -8,6 +8,10 @@ dsn = 'mysql:host=localhost;dbname=projet_din_mai_2020;charset=utf8'
 login = userBlog
 mdp = fM8nx8mZQMc3Jc8C
 
+[API_KEYS]
+stripePK = 'pk_test_8HwJewfvv4FN1hQJwhcaHaJy00N1xbUFjD'
+stripeSK = 'sk_test_cMJB2sdusch1IL5tRHuhUZ6600YEyCqCez'
+
 ; rnvs : start
 [Debug]
 verboseError = false
