--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -1,12 +1,18 @@
 
 [Installation]
 ; webRoot = '/v2.0/mmbx/'
+; domain = 'http://localhost:8090'
+domain = 'https://88c5680b0d2e.eu.ngrok.io'
 webRoot = '/versions/v0.2/mmbx/'
 
 [BD]
 dsn = 'mysql:host=localhost;dbname=meimbox;charset=utf8'    ; rnvs : data source name
 login = root
 mdp = root
+
+[API_KEYS]
+stripePK = 'pk_test_8HwJewfvv4FN1hQJwhcaHaJy00N1xbUFjD'
+stripeSK = 'sk_test_cMJB2sdusch1IL5tRHuhUZ6600YEyCqCez'
 
 ; rnvs : start
 [Debug]
