make work implementation of Stripe Checkout

--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -2,7 +2,8 @@
 [Installation]
 ; webRoot = '/v2.0/mmbx/'
 ; domain = 'http://localhost:8090'
-domain = 'https://88c5680b0d2e.eu.ngrok.io'
+domain = '5f49eeb082cc.eu.ngrok.io'
+urlProtocol = 'https://5f49eeb082cc.eu.ngrok.io'
 webRoot = '/versions/v0.2/mmbx/'
 
 [BD]
