handle Stripe's checkout event and add shipping cost in CheckoutSession

--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -5,15 +5,17 @@
 domain = '5f49eeb082cc.eu.ngrok.io'
 urlProtocol = 'https://5f49eeb082cc.eu.ngrok.io'
 webRoot = '/versions/v0.2/mmbx/'
+dir_static_files = 'content/brain/permanent/'
 
 [BD]
 dsn = 'mysql:host=localhost;dbname=meimbox;charset=utf8'    ; rnvs : data source name
 login = root
 mdp = root
 
-[API_KEYS]
-stripePK = 'pk_test_8HwJewfvv4FN1hQJwhcaHaJy00N1xbUFjD'
-stripeSK = 'sk_test_cMJB2sdusch1IL5tRHuhUZ6600YEyCqCez'
+[STRIPE]
+stripe_pk = 'pk_test_8HwJewfvv4FN1hQJwhcaHaJy00N1xbUFjD'
+stripe_sk = 'sk_test_cMJB2sdusch1IL5tRHuhUZ6600YEyCqCez'
+stripe_webhook = 'whsec_8BenhinBQaHAhcxrY3Lc10R2vq9W39xf'
 
 ; rnvs : start
 [Debug]
