--- a/versions/v0.2/mmbx/.htaccess
+++ b/versions/v0.2/mmbx/.htaccess
@@ -1,7 +1,7 @@
 RewriteEngine on
 # Home
-RewriteRule ^home/qr/+([A-z]+)/*$	                index.php?controller=home&action=$1 [QSA,NC,L]
-RewriteRule ^home/*$	                            index.php?controller=home&action=index [QSA,NC,L]
+RewriteRule ^qr/+([A-z]+)/*$	                index.php?controller=home&action=$1 [QSA,NC,L]
+RewriteRule ^/*$	                            index.php?controller=home&action=index [QSA,NC,L]
 
 # Grid
 RewriteRule ^grid/qr/+([A-z]+)/*$                   index.php?controller=grid&action=$1 [QSA,NC,L]
