add files in email's head tag

--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -3,7 +3,7 @@
 ; webRoot = '/v2.0/mmbx/'
 ; domain = 'http://localhost:8090'
 domain = 'd731e011b9f7.eu.ngrok.io'
-urlProtocol = 'https://d731e011b9f7.eu.ngrok.io'
+https_domain = 'https://d731e011b9f7.eu.ngrok.io'
 webRoot = '/versions/v0.2/mmbx/'
 dir_static_files = 'content/brain/permanent/'
 
