build the email confirmation template

--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -6,6 +6,8 @@ domain = 'd731e011b9f7.eu.ngrok.io'
 https_domain = 'https://d731e011b9f7.eu.ngrok.io'
 webRoot = '/versions/v0.2/mmbx/'
 dir_static_files = 'content/brain/permanent/'
+dir_prod_files = 'content/brain/prod/'
+dir_email_files = 'content/brain/email/'
 
 [DB]
 dsn = 'mysql:host=localhost;dbname=meimbox;charset=utf8'    ; rnvs : data source name
