--- a/versions/v0.2/mmbx/composer.json
+++ b/versions/v0.2/mmbx/composer.json
@@ -7,6 +7,7 @@
         }
     ],
     "require": {
-        "sendinblue/api-v3-sdk": "7.x.x"
+        "sendinblue/api-v3-sdk": "7.x.x",
+        "tijsverkoyen/css-to-inline-styles": "^2.2"
     }
 }
