--- a/versions/v0.2/mmbx/.htaccess
+++ b/versions/v0.2/mmbx/.htaccess
@@ -1,9 +1,4 @@
 RewriteEngine on
-# Home
-RewriteRule ^qr/+([A-z]+)/*$	                    index.php?controller=home&action=$1 [QSA,NC,L]
-RewriteRule ^home/qr/+([A-z]+)/*$	                index.php?controller=home&action=$1 [QSA,NC,L]
-RewriteRule ^home/*$	                            index.php?controller=home&action=index [QSA,NC,L]
-RewriteRule ^/*$	                                index.php?controller=home&action=index [QSA,NC,L]
 
 # Grid
 RewriteRule ^grid/qr/+([A-z]+)/*$                   index.php?controller=grid&action=$1 [QSA,NC,L]
@@ -27,6 +22,16 @@ RewriteRule ^checkout/success/*$	                index.php?controller=checkout&a
 RewriteRule ^checkout/*$	                        index.php?controller=checkout&action=index [QSA,NC,L]
 
 RewriteRule ^webhook/qr/+([A-z]+)/*$	            index.php?controller=webhook&action=$1 [QSA,NC,L]
+
+# Home
+# RewriteRule ^qr/+([A-z]+)/*$	                    index.php?controller=home&action=$1 [QSA,NC,L]
+RewriteRule ^home/qr/+([A-z]+)/*$	                index.php?controller=home&action=$1 [QSA,NC,L]
+RewriteRule ^home/*$	                            index.php?controller=home&action=index [QSA,NC,L]
+# RewriteRule /*$	                                    index.php?controller=home&action=index [QSA,NC,L]
+
+# /
+RewriteRule ^([A-z]+)/*$	                        index.php?controller=landing&action=$1 [QSA,NC,L]
+RewriteRule /*$	                                    index.php?controller=landing&action=index [QSA,NC,L]
 
 # default
 # RewriteRule ^([a-zA-Z]*)/?([a-zA-Z]*)?/?([a-zA-Z0-9]*)?/?$ index.php?controller=$1&action=$2 [QSA,NC]
