--- a/versions/v0.2/mmbx/.htaccess
+++ b/versions/v0.2/mmbx/.htaccess
@@ -31,7 +31,7 @@ RewriteRule ^home/*$	                            index.php?controller=home&actio
 
 # /
 RewriteRule ^([A-z]+)/*$	                        index.php?controller=landing&action=$1 [QSA,NC,L]
-RewriteRule /*$	                                    index.php?controller=landing&action=index [QSA,NC,L]
+RewriteRule ^/*$	                                index.php?controller=landing&action=index [QSA,NC,L]
 
 # default
 # RewriteRule ^([a-zA-Z]*)/?([a-zA-Z]*)?/?([a-zA-Z0-9]*)?/?$ index.php?controller=$1&action=$2 [QSA,NC]
