factored  all reference to content/ in dev.ini and delete all reference in other files

--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -1,13 +1,18 @@
 
-[Installation]
+[URL]
 ; webRoot = '/v2.0/mmbx/'
 ; domain = 'http://localhost:8090'
 domain = 'b2c6789f38bf.eu.ngrok.io'
 https_domain = 'https://b2c6789f38bf.eu.ngrok.io'
 webRoot = '/versions/v0.2/mmbx/'
+
+[FILES PATHS]
 dir_static_files = 'content/brain/permanent/'
 dir_prod_files = 'content/brain/prod/'
 dir_email_files = 'content/brain/email/'
+path_css = 'content/css/'
+path_js = 'content/js/'
+path_brand = 'content/brain/brand/'
 
 [DB]
 dsn = 'mysql:host=localhost;dbname=meimbox;charset=utf8'    ; rnvs : data source name
