factored reference of domain's url in dev.ini file

--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -3,7 +3,7 @@
 ; webRoot = '/v2.0/mmbx/'
 ; domain = 'http://localhost:8090'
 domain = 'b2c6789f38bf.eu.ngrok.io'
-https_domain = 'https://b2c6789f38bf.eu.ngrok.io'
+url_domain = 'https://b2c6789f38bf.eu.ngrok.io'
 webRoot = '/versions/v0.2/mmbx/'
 
 [FILES PATHS]
