--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -8,8 +8,8 @@ webRoot = '/versions/v0.2/mmbx/'
 
 [FILES PATHS]
 dir_static_files = 'content/brain/permanent/'
-dir_prod_files = 'content/brain/prod/'
 dir_email_files = 'content/brain/email/'
+path_product = 'content/brain/prod/'
 path_css = 'content/css/'
 path_js = 'content/js/'
 path_brand = 'content/brain/brand/'
