--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -1,9 +1,10 @@
 
 [URL]
 ; webRoot = '/v2.0/mmbx/'
-; domain = 'http://localhost:8090'
-domain = 'b2c6789f38bf.eu.ngrok.io'
-url_domain = 'https://b2c6789f38bf.eu.ngrok.io'
+domain = 'localhost'
+; domain = 'b2c6789f38bf.eu.ngrok.io'
+url_domain = 'http://localhost:8090'
+; url_domain = 'https://b2c6789f38bf.eu.ngrok.io'
 webRoot = '/versions/v0.2/mmbx/'
 
 [FILES PATHS]
