--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -1,10 +1,10 @@
 
 [URL]
 ; webRoot = '/v2.0/mmbx/'
-domain = 'localhost'
-; domain = '2329e692a084.eu.ngrok.io'
-url_domain = 'http://localhost:8090'
-; url_domain = 'https://2329e692a084.eu.ngrok.io'
+; domain = 'localhost'
+domain = '2329e692a084.eu.ngrok.io'
+; url_domain = 'http://localhost:8090'
+url_domain = 'https://2329e692a084.eu.ngrok.io'
 webRoot = '/versions/v0.2/mmbx/'
 
 [FILES PATHS]
