--- a/versions/v0.2/mmbx/composer.json
+++ b/versions/v0.2/mmbx/composer.json
@@ -8,6 +8,8 @@
     ],
     "require": {
         "sendinblue/api-v3-sdk": "7.x.x",
-        "tijsverkoyen/css-to-inline-styles": "^2.2"
+        "tijsverkoyen/css-to-inline-styles": "^2.2",
+        "piwik/device-detector": "^4.0",
+        "matomo/device-detector": "^4.0"
     }
 }
