add notifation on checkout page about the lock time of the stock

--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -1,10 +1,10 @@
 
 [URL]
 ; webRoot = '/v2.0/mmbx/'
-; domain = 'localhost'
-domain = 'a5394808f1f5.eu.ngrok.io'
-; url_domain = 'http://localhost:8090'
-url_domain = 'https://a5394808f1f5.eu.ngrok.io'
+domain = 'localhost'
+; domain = '31124a48d072.eu.ngrok.io'
+url_domain = 'http://localhost:8090'
+; url_domain = 'https://31124a48d072.eu.ngrok.io'
 webRoot = '/versions/v0.2/mmbx/'
 
 [FILES PATHS]
