add Google Analytics's base cose

--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -31,6 +31,9 @@ sendinblue_apik = 'xkeysib-8a394ca8e62743f974a4416688059cf24e8c2ed18e79132b4d4b7
 [Facebook]
 facebook_pixel_id = '3102017870121851'
 
+[Google]
+measure_id = 'G-WTCEGX6V3S';
+
 ; rnvs : start
 [Debug]
 verboseError = true     ; rnvs : voir index.php
