set up config file 'prod.ini'

--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -1,6 +1,4 @@
-
 [URL]
-; webRoot = '/v2.0/mmbx/'
 ; domain = 'localhost'
 domain = 'c99ae2db6bf6.eu.ngrok.io'
 ; url_domain = 'http://localhost:8090'
@@ -33,7 +31,8 @@ sendinblue_apik = 'xkeysib-8a394ca8e62743f974a4416688059cf24e8c2ed18e79132b4d4b7
 facebook_pixel_id = '2391591717761756'  ; production pixel
 
 [Google]
-measure_id = 'G-WTCEGX6V3S';
+; measure_id = 'G-WTCEGX6V3S';    ; dev
+measure_id = 'G-9NZD679DX8';    ; prod
 
 ; rnvs : start
 [Debug]
