add Tutorial for measurement and cut

--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -1,8 +1,8 @@
 [URL]
 domain = 'localhost'
-; domain = '096d64b3e48c.eu.ngrok.io'
-url_domain = 'http://localhost:8090'
-; url_domain = 'https://096d64b3e48c.eu.ngrok.io'
+domain = '096d64b3e48c.eu.ngrok.io'
+; url_domain = 'http://localhost:8090'
+url_domain = 'https://096d64b3e48c.eu.ngrok.io'
 webRoot = '/versions/v0.2/mmbx/'
 
 [FILES PATHS]
