add events in Analytic

--- a/versions/v0.2/mmbx/config/dev.ini
+++ b/versions/v0.2/mmbx/config/dev.ini
@@ -1,8 +1,8 @@
 [URL]
-domain = 'localhost'
-domain = '096d64b3e48c.eu.ngrok.io'
+; domain = 'localhost'
+domain = 'bd57c35bdb2f.eu.ngrok.io'
 ; url_domain = 'http://localhost:8090'
-url_domain = 'https://096d64b3e48c.eu.ngrok.io'
+url_domain = 'https://bd57c35bdb2f.eu.ngrok.io'
 webRoot = '/versions/v0.2/mmbx/'
 
 [FILES PATHS]
@@ -32,7 +32,7 @@ facebook_pixel_id = '3102017870121851'    ; dev pixel
 ; facebook_pixel_id = '2391591717761756'  ; production pixel
 
 [Google]
-measure_id = 'G-WTCEGX6V3S';    ; dev
+measure_id = 'G-H5B91TNH8T';    ; dev
 ; measure_id = 'G-9NZD679DX8';    ; prod
 
 ; rnvs : start
